k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shop-namespace # Tên này sẽ bị Kustomize ghi đè bằng tên thật trong thư mục overlays (ví dụ: shop-staging hoặc shop-production)
  labels:
    app.kubernetes.io/part-of: e-commerce
